fix: Fix QScrollArea thumb flickering #641

--- a/src/components/scroll-area/scroll-area.ios.styl
+++ b/src/components/scroll-area/scroll-area.ios.styl
@@ -6,6 +6,3 @@
   transition opacity .3s
   &.invisible-thumb
     opacity 0 !important
-
-.q-scrollarea > .absolute
-  width 100%
